<resources>
    <string name="app_name">ForJoggers</string>

    <string name="Start">Start</string>
    <string name="Stop">Stop</string>

    <string name="cannot_save_file">Can not save file %s</string>
    <string name="cannot_load_file">Can not load file %s</string>

    <string name="time">time:</string>
    <string name="distance">distance:</string>
    <string name="current_speed">curr. speed:</string>
    <string name="average_speed">av. speed:</string>
    <string name="energy">energy:</string>
    <string name="Cal">Cal</string>

    <string-array name="graphs">
        <item>latitude</item>
        <item>logitude</item>
        <item>speed</item>
        <item>bearing</item>
        <item>turn</item>
    </string-array>
    <string name="degree">degree</string>


    <string name="gps_unreachable">GPS is unreachable&lt;br/> &lt;br/></string>
    <string name="gps_disable">GPS is disable&lt;br/> &lt;br/></string>
    <string name="track_may_be_lost">The current track has not been saved. Its data will be lost.&lt;br/> &lt;br/> </string>
    <string name="GPS_has_not_found_location">GPS hasn\'t found your location yet.&lt;br/> &lt;br/></string>
    <string name="Continue">Continue?</string>

    <!-- settings fragment -->
    <string name="Settings">Settings</string>
    <string name="return_to_my_location">return to my location</string>
    <string name="keep_in_backgroung">keep in background</string>
    <string name="my_weight">My weight:</string>

    <string name="current_activity">Current track activity:</string>
    <string name="default_activity">Default activity:</string>

    <string-array name="activities">
        <item>Hiking</item>
        <item>Jogging</item>
        <item>Bicycling</item>
    </string-array>

    <string name="distance_unit">Distance unit:</string>
    <string-array name="distance_unit">
        <item>meters</item>
        <item>kilometers</item>
        <item>miles</item>
    </string-array>

    <string-array name="distance_short_unit">
        <item>m</item>
        <item>km</item>
        <item>ml.</item>
    </string-array>

    <string name="speed_unit">Speed unit:</string>
    <string-array name="time_unit">
        <item>second</item>
        <item>minute</item>
        <item>hour</item>
    </string-array>
    <string-array name="time_short_unit">
        <item>sec</item>
        <item>min</item>
        <item>h</item>
    </string-array>
    <string-array name="time_unit_plural">
        <item>seconds</item>
        <item>minutes</item>
        <item>hours</item>
    </string-array>

    <string-array name="weight_unit">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string name="Incorrect_value">Incorrect value!</string>

    <string name="auto_stop">Auto stop</string>
    <string name="after">After:</string>

    <string name="pronounce">Voice notifications</string>

    <string name="tts_engine">TTS:</string>
    <string name="defaultTTS">default</string>

    <string name="every">Every:</string>
    <string name="speak_start_stop">Start/stop tracking</string>

    <!-- tts messages -->
    <string name="tts_init_error">can not initialize TTS system</string>
    <string name="tts_start">start</string>
    <string name="tts_start_en" translatable="false">start</string>
    <string name="tts_stop">stop</string>
    <string name="tts_stop_en" translatable="false">stop</string>

    <string name="tts_miles">miles</string>
    <string name="tts_miles_en" translatable="false">miles</string>

    <plurals name="numberOfhours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="numberOfminutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="numberOfseconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <plurals name="numberOfmeters">
        <item quantity="one">%d metre</item>
        <item quantity="other">%d metres</item>
    </plurals>

    <plurals name="numberOfkilometers">
        <item quantity="one">%d kilometer</item>
        <item quantity="other">%d kilometers</item>
    </plurals>
    <plurals name="numberOfmiles">
        <item quantity="one">%d mile</item>
        <item quantity="other">%d miles</item>
    </plurals>

    <plurals name="numberOfhours_en">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="numberOfminutes_en">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="numberOfseconds_en">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <plurals name="numberOfmeters_en">
        <item quantity="one">%d metre</item>
        <item quantity="other">%d metres</item>
    </plurals>

    <plurals name="numberOfkilometers_en">
        <item quantity="one">%d kilometer</item>
        <item quantity="other">%d kilometers</item>
    </plurals>
    <plurals name="numberOfmiles_en">
        <item quantity="one">%d mile</item>
        <item quantity="other">%d miles</item>
    </plurals>

    <!-- MENU -->
    <string name="action_settings">Settings</string>
    <string name="action_load_track">Load track</string>
    <string name="action_save_track">Save current track</string>
    <string name="action_show_my_location">Show my location</string>
    <string name="action_show_track">Show track</string>
    <string name="action_emulate_track">Emulate track</string>
    <string name="action_quit">Quit</string>

    <!-- TrackingService -->
    <string name="file_saving">Saving...</string>
    <string name="background">Background</string>
    <string name="tts_speaking">Speaking...</string>

    <!-- gps status -->
    <string name="gps">● GPS</string>
    <string name="glonass">● GLONASS</string>
    <string name="others">● Other</string>
    <string name="longitude">lon:</string>
    <string name="latitude">lat:</string>
    <string name="west">W</string>
    <string name="east">E</string>
    <string name="south">S</string>
    <string name="north">N</string>
    <string name="compass">Compass</string>

</resources>
