<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:context="com.kivsw.forjoggers.ui.gps_status.GpsStatusFragment"
              android:id="@+id/rootLayout"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/chartLayout"
        >
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:id="@+id/gpsText"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glonass"
            android:id="@+id/glonassText"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:id="@+id/otherText"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxx"
            android:id="@+id/statusText"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical|left" />
        <View android:layout_width="0dp"
            android:layout_height="1dp"

            android:layout_weight="1" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass"
            android:id="@+id/compassCheckBox"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</LinearLayout>
