<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.settings.SettingsFragment"
    >

<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
             >

    <!-- common settings -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Settings"
        android:id="@+id/captionTextView"
        android:background="@color/settings_caption_color"
        android:textColor="@color/settings_caption_font_color"
        android:gravity="center_vertical|center_horizontal" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keep_in_backgroung"
        android:id="@+id/keepInBackgroundCheckBox"
        android:layout_gravity="center_horizontal|left"
        android:layout_marginLeft="10dp"
        android:background="@color/light_background_color"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_activity"
            android:id="@+id/textView2"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentActivitySpinner"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background_color">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_activity"
            android:id="@+id/textViewDefaultActivity"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defaultActivitySpinner"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/my_weight"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightEditText"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightUnitsSpinner"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background_color">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/distance_unit"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distanceUnitsSpinner"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/speed_unit"
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:layout_weight="1"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedDUnitsSpinner"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="/"
            android:id="@+id/textView5"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedTUnitsSpinner"
            android:layout_weight="1"
            />

    </LinearLayout>

    <!-- auto stop settings -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/auto_stop"
        android:id="@+id/autoStopTextView"
        android:background="@color/settings_caption_color"
        android:textColor="@color/settings_caption_font_color"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background_color">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after"
            android:id="@+id/autoStopDistanceCheckBox"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:checked="false"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/autoStopDistanceValueEditText"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoStopDistanceUnitSpinner"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after"
            android:id="@+id/autoStopTimeCheckBox"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/autoStopTimeValueEditText"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoStopTimeUnitSpinner"
            />

    </LinearLayout>



    <!-- TTS settings -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pronounce"
        android:id="@+id/pronounceTextView"
        android:background="@color/settings_caption_color"
        android:textColor="@color/settings_caption_font_color"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tts_engine"
            android:id="@+id/ttsTextView"
            android:layout_marginBottom="10dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ttsSpinner"
            android:layout_weight="1"
            />

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_start_stop"
        android:id="@+id/startStopSpeakCheckBox"
        android:layout_gravity="center_horizontal|left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background_color">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every"
            android:id="@+id/distanceSpeakCheckBox"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/distanceSpeakValueEditText"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distanceSpeakUnitSpinner"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every"
            android:id="@+id/timeSpeakCheckBox"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/timeSpeakValueEditText"
            android:layout_weight="1"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeSpeakUnitSpinner"
            />
    </LinearLayout>

</LinearLayout>

</ScrollView>